--- a/photo.html
+++ b/photo.html
@@ -8,17 +8,19 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>🥐A picture of a croissant</h1>
-    <img
-      src="/images/croissant.jpeg"
-      alt="Croissant picture"
-      class="croissant-pic"
-    />
-    <footer>
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact </a>
-    </footer>
-    <br />
+    <div class="cro">
+      <h1>🥐A picture of a croissant</h1>
+      <img
+        src="/images/croissant.jpeg"
+        alt="Croissant picture"
+        class="croissant-pic"
+      />
+      <footer>
+        <a href="/">Homepage</a>
+        <a href="/photo.html">Photo</a>
+        <a href="/contact.html">Contact </a>
+      </footer>
+      <br />
+    </div>
   </body>
 </html>
