--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,10 @@
     <h1>🥐 Contact us</h1>
     <p>
       To contact croissant.com, please email us at
-      <a href="mailto:hello@croissant.com" title="contact us by email"
+      <a
+        href="mailto:hello@croissant.com"
+        class="contact-link"
+        title="contact us by email"
         >hello@croissant.com</a
       >
       for more info
