made the pages SEO-friendly

--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="This is a website, dedicated to croissants. All you need to know about croissants."
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link href="/css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Contact us to get free croissants - Croissant.com</title>
   </head>
   <body>
     <h1>🥐 Contact us</h1>
@@ -20,9 +24,9 @@
       for more info
     </p>
     <footer>
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact </a>
+      <a href="index.html" target="_blank">Homepage</a>
+      <a href="photo.html" target="_blank">Photo</a>
+      <a href="contact.html" target="_blank">Contact </a>
     </footer>
   </body>
 </html>
