--- a/croissant website.html
+++ b/croissant website.html
@@ -2,14 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="description"
-      content="This is a website, dedicated to croissants. All you need to know about croissants."
-    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
-    <title>Croissant: amazing pastry - Croissant.com</title>
+    <title>Croissant: amazing pastry</title>
   </head>
   <body>
     <h1>🥐 Croissant</h1>
@@ -20,9 +16,9 @@
     </p>
     <br />
    <footer>
-    <a href="index.html" target="_blank">Homepage</a>
-    <a href="photo.html" target="_blank">Photo</a>
-    <a href="contact.html" target="_blank">Contact </a>
+    <a href="index.html">Homepage</a>
+    <a href="photo.html">Photo</a>
+    <a href="contact.html">Contact </a>
    </footer>
 
     </div>
