--- a/photo.html
+++ b/photo.html
@@ -2,23 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="This is a website, dedicated to croissants. All you need to know about croissants."
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link href="/css/styles.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css" />
+    <title>An example of a perfect croissant - Croissant.com</title>
   </head>
   <body>
     <div class="cro">
       <h1>🥐A picture of a croissant</h1>
       <img
-        src="/images/croissant.jpeg"
+        src="images/croissant.jpeg"
         alt="Croissant picture"
         class="croissant-pic"
       />
       <footer>
-        <a href="/">Homepage</a>
-        <a href="/photo.html">Photo</a>
-        <a href="/contact.html">Contact </a>
+        <a href="index.html" target="_blank">Homepage</a>
+        <a href="photo.html" target="_blank">Photo</a>
+        <a href="contact.html" target="_blank">Contact </a>
       </footer>
       <br />
     </div>
