made the website live

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
       content="This is a website, dedicated to croissants. All you need to know about croissants."
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link href="css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="/css/styles.css" rel="stylesheet" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact us to get free croissants - Croissant.com</title>
   </head>
@@ -24,9 +24,9 @@
       for more info
     </p>
     <footer>
-      <a href="index.html" target="_blank">Homepage</a>
-      <a href="photo.html" target="_blank">Photo</a>
-      <a href="contact.html" target="_blank">Contact </a>
+      <a href="/" target="_blank">Homepage</a>
+      <a href="/photo.html" target="_blank">Photo</a>
+      <a href="/contact.html" target="_blank">Contact </a>
     </footer>
   </body>
 </html>
