--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="/css/styles.css" rel="stylesheet" type="text/css" />
     <title>Croissant: amazing pastry - Croissant.com</title>
   </head>
   <body>
@@ -20,9 +20,9 @@
     </p>
     <br />
    <footer>
-    <a href="index.html" target="_blank">Homepage</a>
-    <a href="photo.html" target="_blank">Photo</a>
-    <a href="contact.html" target="_blank">Contact </a>
+    <a href="/" target="_blank">Homepage</a>
+    <a href="/photo.html" target="_blank">Photo</a>
+    <a href="/contact.html" title="Contact us">Contact </a>
    </footer>
 
     </div>
