--- a/photo.html
+++ b/photo.html
@@ -8,21 +8,21 @@
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="/css/styles.css" rel="stylesheet" type="text/css" />
     <title>An example of a perfect croissant - Croissant.com</title>
   </head>
   <body>
     <div class="cro">
       <h1>🥐A picture of a croissant</h1>
       <img
-        src="images/croissant.jpeg"
+        src="/images/croissant.jpeg"
         alt="Croissant picture"
         class="croissant-pic"
       />
       <footer>
-        <a href="index.html" target="_blank">Homepage</a>
-        <a href="photo.html" target="_blank">Photo</a>
-        <a href="contact.html" target="_blank">Contact </a>
+        <a href="/" target="_blank">Homepage</a>
+        <a href="/photo.html" target="_blank">Photo</a>
+        <a href="/contact.html" target="_blank">Contact </a>
       </footer>
       <br />
     </div>
